--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,13 @@
 *{
     padding: 0;
     margin: 0;
+    box-sizing:border-box;
 }
 body,html {
     width: 100%;
     height: 100%;
     background: red;
+    box-sizing:border-box;
 }
 #body-wrapper{
     width: 90%;
@@ -15,14 +17,17 @@ body,html {
 }
 #header-wrapper{}
 #content-wrapper{
+    width:100%;
     padding-left:20%;
+    position:relative;
+    overflow:hidden;
     transition :all 0.5s ;
 }
 #side-bar{
     width :20%;
     margin-left:-20%;
-    position :fixed;
-    
+    position :absolute;
+
 }
 #content{
     position:relative;
@@ -38,4 +43,11 @@ body,html {
 }
 #content-wrapper.toggle #side-bar{
     width :0;
+}
+ul li{
+    list-style:none;
+
+}
+ul li a{
+    text-decoration:none;
 }
