--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ body,html {
     background: red;
     box-sizing:border-box;
 }
+a{
+    display:block;
+    width:100%;
+}
 #body-wrapper{
     width: 90%;
     min-height: 100%;
@@ -19,32 +23,45 @@ body,html {
 #content-wrapper{
     
     width:100%;
-    padding-left:20%;
+    padding-left:200px;
     position:relative;
     overflow:hidden;
+    min-height:600px;
     transition :all 0.5s ;
 }
 #side-bar{
-    width :20%;
-    margin-left:-20%;
+    width :200px;
+    margin-left:-200px;
     position :absolute;
-
+    min-height:100%;
+    background:black;
+    transition :all 0.5s ;
 }
 #content{
+    padding:0 0 0 50px ;
     position:relative;
 }
 #footer-wrapper{}
 .sidebar-nav{
     margin :0;
     padding :0;
-    width:100%;
+    width:150px;
+    
+}
+#collapsebtn{
+    width:50px;
+    height:100%;
+    background:white;
+    float:right;
 }
 #magicbar{
     width :50px;
     background:blue;
     position:absolute;
+    top:50%;
     display:none;
-    transition:all 0.5s;
+    transition:all 1s;
+    
    
 }
 #content-wrapper.toggle{
@@ -58,6 +75,7 @@ ul li{
 
 }
 ul li a{
+    display:block;
     text-decoration:none;
 }
 #content-wrapper.toggle #magicbar{
