--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 body,html {
     width: 100%;
     height: 100%;
-    background: red;
+    background: #F8F8F8 ;
     box-sizing:border-box;
 }
 a{
@@ -17,7 +17,7 @@ a{
     width: 90%;
     min-height: 100%;
     margin: 0 auto 0 auto ;
-    background: yellow;
+    background: #F8F8F8;
 }
 #header-wrapper{}
 #content-wrapper{
@@ -34,9 +34,32 @@ a{
     margin-left:-200px;
     position :absolute;
     min-height:100%;
-    background:black;
+    font-size:18px;
     transition :all 0.5s ;
 }
+.col-xs-12, .col-sm-6 ,.col-lg-4{
+    margin:0 0 ;
+    padding:0 0 ;
+}
+
+.product {
+    margin:0 0 ;
+    padding:2% 2%;
+    height:400px;
+    text-align:center;
+    font-size:20px;
+   
+}
+.product a{
+    height:100%;
+    width:100%;
+}
+
+.productImage{
+height:60%;
+width:90%;
+}
+
 #content{
     padding:0 0 0 50px ;
     position:relative;
@@ -46,19 +69,18 @@ a{
     margin :0;
     padding :0;
     width:150px;
-    
+    color:#0A5292;
 }
 #collapsebtn{
     width:50px;
     height:100%;
-    background:white;
     float:right;
 }
 #magicbar{
     width :50px;
-    background:blue;
+    height:100%;
     position:absolute;
-    top:50%;
+    top:0%;
     display:none;
     transition:all 1s;
     
@@ -82,8 +104,30 @@ ul li a{
     display:block;
     margin-left:-50px;
 }
+.main-category{
+    color:#0A5292;
+    font-size:20px;
+}
+a.main-category:link   {
+   text-decoration:none;
+     color:#0A5292;
+}
+a.main-category:visited{
+ text-decoration:none;
+     color:#63de2d;
+}
+a.main-category:hover{
+text-decoration:none;
+     color:#0A5292;
+}
+a.main-category:active   {
+   text-decoration:none;
+     color:#63de2d;
+ }
+.product a:link , .product a:visited,.product a:hover , .product a:active{text-decoration:none;}
 .sub-category{
-background :grey;
+
+font-size:18px;
 height: 0;
 overflow: hidden;
 transition :all 0.5s;
@@ -91,4 +135,41 @@ transition :all 0.5s;
 .hide-category{
  height:100px; 
  padding-top:30px;  
+}
+.navbar ,.navbar-default{
+    border-right:none;
+    border-left:none;
+    border-top:none;
+    border-radius:0;
+    font-size:18px;
+    color:blue;
+    text-align:center;
+    float:none;  
+
+}
+
+
+.navbar-default .navbar-nav > li > a {
+    
+    color:#0A5292;
+
+}
+.navbar-default .navbar-nav > li >  a:focus {
+    
+    color:#0A5292;
+
+}
+.navbar-default .navbar-nav > li > a:hover ,a:visited {
+    
+    color:#63de2d;
+
+}
+.btn ,.btn-default , .form-control{
+    color:#0A5292;
+    background-color:#F8F8F8;
+
+}
+.input-group{
+    border-radius:0;
+
 }
