--- a/css/style.css
+++ b/css/style.css
@@ -61,9 +61,10 @@ width:90%;
 }
 
 #content{
-    padding:0 0 0 50px ;
+    padding:0 0 0 0 ;
     position:relative;
 }
+
 #footer-wrapper{}
 .sidebar-nav{
     margin :0;
