--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,10 @@ a{
     font-size:20px;
    
 }
+.product h3{
+        color:#0A5292;
+
+}
 .product a{
     height:100%;
     width:100%;
@@ -59,22 +63,44 @@ a{
 height:60%;
 width:90%;
 }
+.page-header{
+height:100%;
+}
+.page-header img {
 
+    display:inline-block;
+   vertical-align: middle;
+  
+}
+.navbar-form {
+margin-top:18px;
+}
+.page-header   h3{
+    height:100%;
+    float:right;
+     font-size:42px;
+    margin-right:30px;
+    padding-top:45px;
+    padding-bottom:0;
+    vertical-align :middle;
+}
 #content{
     padding:0 0 0 0 ;
     position:relative;
 }
+price , .price{
+        color:#63de2d;
 
+}
 #footer-wrapper{}
 .sidebar-nav{
     margin :0;
     padding :0;
-    width:150px;
+    width:100%;
     color:#0A5292;
 }
 #collapsebtn{
     width:50px;
-    height:100%;
     float:right;
 }
 #magicbar{
@@ -108,6 +134,10 @@ ul li a{
 .main-category{
     color:#0A5292;
     font-size:20px;
+    border:#eee solid 2px; 
+    border-top:none;
+border-right:none;
+ border-left:none;
 }
 a.main-category:link   {
    text-decoration:none;
@@ -134,8 +164,8 @@ overflow: hidden;
 transition :all 0.5s;
 }
 .hide-category{
- height:100px; 
- padding-top:30px;  
+ height:auto;
+ padding-top:5px;  
 }
 .navbar ,.navbar-default{
     border-right:none;
@@ -146,10 +176,16 @@ transition :all 0.5s;
     color:blue;
     text-align:center;
     float:none;  
-
+    margin:0 0 ;
 }
-
-
+.navbar-toggle ,.collapsed{
+margin-top:29px;
+margin-left:10px;
+}
+navbar-toggle collapsed.navbar-default .navbar-nav > li {
+        float: none;
+        display: inline-block;
+    }
 .navbar-default .navbar-nav > li > a {
     
     color:#0A5292;
